// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsonc.md 1`] = `
\`\`\`jsonc
   // comment
{
     "foo"   :    "bar"
}
\`\`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`\`\`jsonc
// comment
{
  "foo": "bar"
}
\`\`\`

`;

exports[`trailing_comma.md 1`] = `
\`\`\`json
{
  "foo": "bar"
}
\`\`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`\`\`json
{
  "foo": "bar"
}
\`\`\`

`;
